[tool.poetry]
name = "asynckivy-ext-queue"
version = "0.2.0.dev0"
description = "Extension for asynckivy programs"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = 'https://github.com/asyncgui/asynckivy-ext-queue'
homepage = 'https://github.com/asyncgui/asynckivy-ext-queue'
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [
    { include = "asynckivy_ext/queue.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
asynckivy = "~0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
kivy = "^2.2.1"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
furo = "^2023.9.10"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
